# KittyBot

./: .cspell.json  .dockerignore  .example.env  .gitignore  .vimspector.json  Dockerfile  LICENSE  README.md  bot.py  config.py  db.py  docker-compose.yaml  emoji_cache.py  init-lm.py  pyproject.toml  pyrightconfig.json  requirements.txt  update-message-counts.sql
archived_extensions/: snark.py
assets/: pickuplinesgalore.json  wordle_solutions.txt  wordle_valid_words.txt
behaviours/: __init__.py  ban_french.py  deletes.py  duplicate_message_policing.py  fight_club.py  jimmy_nerfer.py  meme_rater.py  meme_repost_blocker.py  messageparty.py  notalurker.py  paidnotpayed.py  rant_patrol.py  snark.py  userinfo.py
commands/: advice.py  cashrate.py  deletes.py  emoji_stats.py  emoji_users.py  emojicloud.py  fact.py  fortune.py  isthestraitclosed.py  meme_stats.py  messageboard.py  pickupline.py  ping.py  say.py  shitmemeboard.py  snark.py  test_split.py  total_message_count.py  translate.py  userinfo.py  wordcloud.py  wordle_command.py  wordle_stats.py
commons/: agents.py  appemoji.py  datautil.py  db.py  emoji_cache.py  meme_stat.py  memory.py  message_utils.py  scheduler.py  wordle.py
docs/: 0. Getting Started.md
extensions/: add_review_command.py  add_review_message.py  adder.py  advice.py  cowsay.py  deletes.py  duplicate_message_policing.py  emoji_stats.py  emoji_users.py  emojicloud.py  fact.py  fortune.py  info.py  jimmy_nerfer.py  kitti_gpt.py  meme_rater.py  meme_repost_blocker.py  meme_stats.py  messageboard.py  messageparty.py  notalurker.py  pickupline.py  (+14 more)
(+12 files in other folders)
